# ai-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: save.md
backend/: pyproject.toml
backend/nex_suites/: DOCUMENT_CONVERTER.md  RUN_INSTRUCTIONS.md  main.py  mcp_client.py  mcp_server.py  quick_test.py  test_conversion.py  test_document_converter.py  test_env_roots.py  test_formatted_output.py  test_rich_chat.py  test_roots_fix.py
backend/nex_suites/core/: cli.py  roots_manager.py  tools.py  utils.py
backend/nex_suites/prompts/: business_prompts.py
backend/nex_suites/prompts/handlers/: __init__.py
backend/nex_suites/prompts/utils/: __init__.py
backend/nex_suites/resources/: __init__.py  purchase.py
backend/nex_suites/tools/: document_converter.py  filesystem.py  sales.py
cli_project/.claude/commands/: save.md
docs/: MCP101.md
nex_suites/: .gitignore  config.py  main.py  mcp_client.py  mcp_server.py  test_connection.py  test_db_compliance.py  test_db_utils.py  test_mcp_pairing.py  test_quick_pairing.py  test_sales_tool.py
nex_suites/core/: chat.py
nex_suites/prompts/: INFO.md  __init__.py  config.yaml
nex_suites/prompts/handlers/: sales_prompts.py
nex_suites/prompts/templates/sales/: format_invoice.md
nex_suites/resources/: purchase.py
nex_suites/tools/: README.md  SOLUTION.md  TODO_IMPLEMENTATION.md  enforcement.py  good_prompt.md  purchase.py  sales.py  task_tracker.py
nex_suites/utils/: db.py
rag/: pyproject.toml
