[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioconsole>=0.8.1",
    "aiomysql>=0.2.0",
    "anthropic>=0.51.0",
    "mcp[cli]>=1.8.0",
    "opencv-python>=4.12.0.88",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "prompt-toolkit>=3.0.51",
    "pyboxen>=1.3.0",
    "pytesseract>=0.3.13",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
]
